Added breakout game, file name consistency fixes

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -11,6 +11,14 @@
                 </a>
             </button>
         </li>
+        <li>
+            <button>
+                <a href="{{ url_for('Breakout') }}" style="font-family: 'Comic Sans MS', cursive;">
+                    <img src="{{ url_for('static', filename='images/breakout.png') }}" alt="Breakout Image">
+                    Breakout
+                </a>
+            </button>
+        </li>
         <!-- Add more game links as needed -->
     </ul>
 {% endblock %}
