--- a/Templates/base.html
+++ b/Templates/base.html
@@ -1,15 +1,14 @@
-<!-- app/templates/base.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pygames</title>
+    <title>PyGames</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <header>
-        <h1>pygames</h1>
+        <h1>PyGames Central</h1>
     </header>
     <main>
         {% block content %}{% endblock %}
@@ -17,5 +16,6 @@
     <footer>
         <p>&copy; 2024 pygames</p>
     </footer>
+    <script src="{{ url_for('static', filename='main.js') }}"></script>
 </body>    
 </html>
